@@ -1,6 +1,7 @@
 # Offpunk History
 
 ## 1.3 - Unreleased
+- Streaming URL without valid content-length are now closed after 5Mo of download (thanks to Eoin Carney for reporting the issue)
 - Fixed a crash when the cache is already a dir inside a dir.
 
 ## 1.2 - March 24th 2022
